
Extend processing of symblic links in the gant Posix scripts. (Thanks to Nicolas Lalevée for submitting
GANT-57.)

Update to use Ivy 2.0.0-rc1.

Fix GANT-30 by removing .groovy and .gant extensions from file names before constructing class names.

GStrings no longer cause problem in depends call -- fixed GANT-55.  GANT-61 is a duplicate of GANT-55.


1.4.0 ( r9604 )
---------------

Remove the assumption that all instances of a given class have the same metaclass.

Fixed the method search so that the GantBuilder object referred to by ant is checked for all closures
declared in a target. However, this raises issues, cf. GANT-49.

Correct Execute.shell method so it works on Windows without Cygwin or MSYS. cf. GANT-38.

Correct all the tools and target sets so that a GantBinding rather than a Binding is passed.  NB This is a
breaking API change for anyone who has written their own tools or target sets.

Add groovyc taskdef to the GantBuilder instance so the user doesn't have to.  GANT-19 relates.

Tidied up the tool and target set classes to ensure that both "<<" and "** *" operators work correctly.

Stop the binding entry target from being redefined.

Remove the task entry in the binding.  It was deprecated and advertised as being removed in v1.3.

Added a new Gant constructor to allow precompiled scripts to be used.  Provided by Peter Ledbrook,
cf. GANT-47.

Fixes:  GANT-19, GANT-32, GANT-38, GANT-42, GANT-45, GANT-46.

Workaround provided for GANT-49, but a final fix is still needed.

1.3.0 ( r9298, tagged as 9302 )
-------------------------------

Change the way Groovy installs so that it doesn't install into the Groovy installation, but into its own
hierarchy.  There are two distributions:

            1.  Requires a separate Groovy installation.  Currently there are two version:
                a.  Compiled against Groovy 1.5.6
                b.  Compiled against Groovy 1.6-beta-1

            2.  Self-contained, includes all dependent jars.
